applications/nginx-tsd-taxris-upload/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forward-proxy-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forward-proxy
  template:
    metadata:
      labels:
        app: forward-proxy
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: nginx-config
        configMap:
          name: forward-proxy-config
