applications/nginx-tsd-taxris-upload/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tsdtax-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-set-headers: "custom-headers"
    nginx.ingress.kubernetes.io/upstream-vhost: "tws.mof.gov.la"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - tsdtax.hometsd.me
    secretName: tsdtax-hometsd-me-tls
  rules:
  - host: tsdtax.hometsd.me
    http:
      paths:
      - path: /mediate/TaxRIS/createPfmFromCRSDtl/SndCrs
        pathType: Prefix
        backend:
          service:
            name: external-service
            port:
              number: 80
